# get-site

./: .gitignore  LICENSE  README.md  crawled_apify.com.md  crawled_example.com.md  crawled_site.md  main.py  out.md  pyproject.toml  requirements.txt
.actor/: Dockerfile  actor.json  dataset_schema.json  input_schema.json
src/: __init__.py  __main__.py  main.py
storage/datasets/default/: 000000001.json  000000002.json  000000003.json  000000004.json  000000008.json  000000009.json  000000010.json  000000011.json  000000012.json  000000013.json  000000014.json  000000015.json  000000017.json  000000018.json  000000019.json  000000020.json  000000021.json  000000022.json  000000024.json  000000025.json  000000026.json  000000028.json  000000029.json  000000030.json  000000031.json  000000033.json  000000034.json  000000036.json  000000038.json  000000039.json  000000040.json  000000041.json  000000042.json  000000043.json  __metadata__.json
storage/key_value_stores/default/: __metadata__.json
storage/request_queues/default/: __metadata__.json
tests/: conftest.py  test_actor.py  test_crawler.py
