[project]
name = "get-site"
version = "0.1.0"
description = "Get-site is a python package that allows you to get the content of a website."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "beautifulsoup4",
    "html2text",
    "urllib3",
    "validators",
    "httpx",
    "apify",
    "asyncio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov",
    "respx"
]
